discussion/kv_engine/172336/172336_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51413: Don't warmup vBuckets without state

It's possible for both couchstore and magma backends to create a
"vBucket" (header/KVStore respectively) without persisting the
vbucket_state. Warming up such a vBucket currently causes us to
warmup a vBucket with a defaul initialized vBucket state. Doing so
should be benign, ns_server should spot the vBucket in the incorrect
state post-warmup and correct it. If we were to have some IO error
during warmup though and we were to fail to persist the vBucket state
to disk during the PopulateVBMap phase of warmup then the subsequent
scan of the vBucket would find no vbucket_state and an exception would
be thrown. We'd already be in a bad state, having been unable to persist
something to disk, but the warmup would then be aborted and no more
items would be loaded into memory.

There is no point even trying to scan a vBucket in such a state, it
should not be possible for us to have a vBucket without a state that
actually has data, and such a vBucket is in an invalid state anyway.
Treat a vBucket in this state similary to one with a corrupt snapshot
and don't load it at all, ns_server will correct the vBucket states
post-warmup.

Change-Id: Iac6eb1c681c6ec8802900b66b1cbc2dc86f4901f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-03-22 10:29:59.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-22 10:38:44.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16127/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:602:16: error: no member named "SetMaxOpenFiles" in namespace "magma" [clang-diagnostic-error]
        magma::SetMaxOpenFiles(configuration.getMaxFileDescriptors());
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16127/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:602:16:
error: no member named "SetMaxOpenFiles" in namespace "magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16127/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44610/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(602): error C2039: "SetMaxOpenFiles": is not a member of "magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44610/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37541/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:602:16:
error: no member named "SetMaxOpenFiles" in namespace "magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37541/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5785/ : FAILURE

Compile error at [2022-03-22T10:34:51.535Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:602:16:
error: no member named "SetMaxOpenFiles" in namespace "magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5785/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18930/ : FAILURE

Compile error at [2022-03-22T10:32:26.938Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:602:16:
error: no member named "SetMaxOpenFiles" in namespace "magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18930/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18221/ : FAILURE

Compile error at [2022-03-22T10:32:40.935Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:602:16:
error: ?SetMaxOpenFiles? is not a member of ?magma?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18221/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16972/ : FAILURE

Compile error at [2022-03-22T10:32:47.371Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:602:16:
error: no member named "SetMaxOpenFiles" in namespace "magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16972/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26306/ : FAILURE

Compile error at [2022-03-22T10:32:18.616Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:602:16:
error: no member named "SetMaxOpenFiles" in namespace "magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26306/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5843/ : FAILURE

Compile error at [2022-03-22T10:35:05.852Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:602:16:
error: ?SetMaxOpenFiles? is not a member of ?magma?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5843/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15059/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17898/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
